# FuzzyAI

./: CONTRIBUTING.md  README.md  asyncio  examples.py  http.raw  pyproject.toml  requirements.txt  target_prompts.txt  utils.py
fuzzy/: consts.py
fuzzy/handlers/attacks/: base.py
fuzzy/handlers/attacks/shuffle_inconsistency/: handler.py
fuzzy/handlers/classifiers/harmful_llm/: handler.py
fuzzy/handlers/classifiers/harmful_score_llm/: handler.py
fuzzy/llm/providers/ollama/: ollama.py
resources/: Jailbreaks.md
resources/notebooks/: llm_attacks_detection_methods_evaluation.ipynb
resources/notebooks/builtin_evaluators/: evaluator_nb.ipynb  huggingface-evaluation.ipynb  notebook.ipynb
resources/notebooks/llm_attacks_detection_methods_evaluation/: notebook.ipynb  simplified_llm_judge.ipynb
src/fuzzyai/: cli.py  consts.py  fuzzer.py  webui.py
src/fuzzyai/db/: mongodb.py
src/fuzzyai/handlers/: response_refinement_handler.py
src/fuzzyai/handlers/attacks/: base.py  models.py  proto.py
src/fuzzyai/handlers/classifiers/: base.py
src/fuzzyai/handlers/db/: adv_attacks.py  adv_classification.py  adv_gcg.py  adv_genetic.py  adv_prompts.py  adv_suffixes.py  adv_taxonomy.py  fuzzer_report.py
src/fuzzyai/handlers/mutators/: base.py
src/fuzzyai/llm/: chain.py  models.py
src/fuzzyai/llm/providers/: base.py
src/fuzzyai/models/: fuzzer_result.py
src/fuzzyai/utils/: db.py  utils.py
tests/: test_artprompt_attack.py  test_attack_modes.py  test_cli_execution.py  test_fuzzy.py  test_sql_injection.py  test_xss_protection.py
(+73 files in other folders)
